# dth-capture

./: .env.example  README.md  capture.py  iptv-capture.service  pyproject.toml
app/: config.py  main.py
app/capture/: ffmpeg.py  watcher.py
app/schemas/: job.py
app/services/: minio_service.py  mongodb_service.py  rabbitmq_publisher.py
app/utils/: logging.py
