[project]
name = "dth-capture"
version = "0.2.0"
description = "DTH capture -> 1-min segments -> MinIO + MongoDB + RabbitMQ trigger"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "minio>=7.2",
    "watchdog>=4.0",
    "pymongo>=4.6",
    "pika>=1.3",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
